Bug 1364338: Force a repaint when CSS 'outline-width' or 'outline-offset' change. r=heycam

Previously, when these properties changed, we'd only send change hints to
recompute overflow areas & trigger DLBI. If the outline was always outside of
the element's border box, this old strategy was generally OK, because the
outline tweak would cause a change to the overflow areas' size, and that would
invalidate the changed area via DLBI & trigger a repaint.

However, for outlines that are *inside* of the element (via negative
'outline-offset'), these change hints were not sufficient, because tweaks to
the outline width & offset will NOT affect the size of the element's overflow
areas and will not trigger any DLBI invalidation.

So in order to correctly handle these changes, we really need to request a
repaint of the affected element, since some piece of the element may need to be
repainted even if it's not changing in size.

MozReview-Commit-ID: J4KGUHrJ09U

--HG--
extra : rebase_source : 677950d5aebdf7e90120b8fe7bb937344da42d7d